# TDD_learning

./: README.md  docker-compose.prod.yml  docker-compose.yml  dockerfile  pyproject.toml  setup.cfg
nginx/: default.conf
src/: db.json
src/apps/base/management/commands/: createadmin.py
src/apps/list/: domain.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
src/apps/list/migrations/: 0001_initial.py  0002_list.py  0003_alter_list_slug_list_list_list_slug_95efee_idx.py  0004_list_created.py  0005_alter_list_options_listitem_list.py
src/apps/list/static/css/: base.css
src/apps/list/temp/unit/: test_list_items_mixin.py  test_list_view.py
src/apps/list/templates/: base.html  list.html
src/apps/list/templates/list/: home_page.html  list.html  todo.html
src/apps/list/tests/: test_forms.py  test_models.py  test_todo_model.py  test_todo_page.py  test_views.py
src/apps/list/tests/home_page/integrations/: test_home_page.py  test_list_item_model.py
src/apps/list/tests/libs/: login_test_case.py
src/apps/registration/: forms.py  middleware.py  tests.py  urls.py  views.py
src/apps/registration/templates/registration/: login.html
src/config/: urls.py
src/config/settings/: base.py
src/functional_tests/: base.py  my_live_server_test.py  selenium_driver.py  test_features_for_each_user.py  test_home_page_names.py  test_item_validation.py  test_layout_and_styling.py  test_send_mail.py  test_todo_for_each_user.py  tests.py
tests/: base.py  functional_test.py  test_layout_and_styling.py
tests/features/: some.feature
tests/libs/: __init__.py
(+3 files in other folders)
