[tool.poetry]
name = "tdd-learning"
version = "0.1.0"
description = ""
authors = ["emurze <rozanov7475@yandex.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.2.6,<4.3.0"
pillow = ">=10.0.1,<10.1.0"
psycopg2-binary = ">=2.9.9,<2.10.0"
gunicorn = ">=21.2.0,<21.3.0"
selenium = "^4.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
